--- a/src/SuperBlog/Views/article.twig
+++ b/src/SuperBlog/Views/article.twig
@@ -3,16 +3,12 @@
 {% block content %}
 
     <h1>{{ article.title }}</h1>
-
     <blockquote class="flow-text">{{ article.content }}</blockquote>
-
     <p><a href="/" class="btn">Back to the home page</a></p>
 
     <hr/>
 
-    <p>
-        To read this article in the CLI, run the following command:
-    </p>
+    <p>To read this article in the CLI, run the following command:</p>
 
     <div class="card-panel grey darken-3" style="color: white">
         <pre><code>php console.php article 1</code></pre>
