--- a/src/SuperBlog/Views/article.twig
+++ b/src/SuperBlog/Views/article.twig
@@ -15,7 +15,7 @@
     </p>
 
     <div class="card-panel grey darken-3" style="color: white">
-        <pre><code>php console.php article 1</code></pre>
+        <pre><code>php console.php article {{ article.id }}</code></pre>
     </div>
 
 {% endblock %}
